[gd_scene load_steps=9 format=3 uid="uid://dpwtouabqeyij"]

[ext_resource type="Texture2D" uid="uid://c4ogf8ch6nsd7" path="res://assets/icon.svg" id="1_igdhu"]
[ext_resource type="Script" path="res://scripts/enemy/turret.gd" id="1_j0n0d"]
[ext_resource type="Script" path="res://scripts/components/health_component.gd" id="1_qgo20"]
[ext_resource type="Script" path="res://scripts/components/hitbox_component.gd" id="2_jeaak"]
[ext_resource type="Script" path="res://scripts/components/weapon_component.gd" id="3_481cp"]
[ext_resource type="Texture2D" uid="uid://4iknyqvv5ih3" path="res://assets/turret.png" id="5_dl2ua"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_16l23"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_umcmt"]
size = Vector2(32, 32)

[node name="Turret" type="StaticBody2D"]
script = ExtResource("1_j0n0d")

[node name="Icon" type="Sprite2D" parent="."]
scale = Vector2(0.251, 0.251)
texture = ExtResource("1_igdhu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_16l23")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("1_qgo20")
max_health = 5.0

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 4
collision_mask = 0
script = ExtResource("2_jeaak")
health_component = NodePath("../HealthComponent")

[node name="Hitbox" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("RectangleShape2D_umcmt")
debug_color = Color(0.996078, 0, 0.180392, 0.419608)

[node name="WeaponComponent" type="Node" parent="."]
script = ExtResource("3_481cp")
cooldown_time = 0.6
collision_mask = 2

[node name="Head" type="Sprite2D" parent="."]
texture = ExtResource("5_dl2ua")

[node name="ShootingPoint" type="Marker2D" parent="Head"]
position = Vector2(12, 0)

[connection signal="Died" from="HealthComponent" to="." method="_on_health_component_died"]
